# coin_betting

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  __init__.py  animation.py  optimizer.py  pyproject.toml  requirements.txt  setup-pr.sh  setup.cfg  setup.py  sgd.py  style.py  tox.ini
.github/: Makefile
.github/workflows/: build.yml  publish.yml
Data/: README.md  func_constraints.json  opt_params.json  opt_params2.json
Data/scripts/: config.py  generate_optim_config.py
examples/: mnist.py  profiler.py  separable_data.py  test_optimizers.py
examples/MNIST/: mnist.py
examples/grid_search/: config.yaml  ray_tune_example.py
experimental/: find_best.py  measure_test.py  plot_results.py  single_test.py  test_optimizers_mp.py
experimental/results/: opt_results_10000.json  opt_results_100000.json  opt_results_1000000.json  opt_results_500.json
optimal-pytorch/: __init__.py  adam.py  optimizer.py
optimal-pytorch/functions/: loss_functions_1d.py
optimal_pytorch/: __init__.py  accsgd.py  adabound.py  adam.py  adamod.py  diffgrad.py  lamb.py  lookahead.py  novograd.py  onsbet.py  optimizer.py  pid.py  radam.py  recursive.py  regralizer.py  sgd.py  sgdol.py  sgdw.py  types.py  yogi.py
optimal_pytorch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
optimal_pytorch/coin_betting/: __init__.py
optimal_pytorch/functions/: __init__.py  loss_functions_1d.py
optimal_pytorch/optim/: __init__.py  cocob.py  (+16 more)
tests/: __init__.py  cb_torch_test.py  functions.py  loss_test.py  profiler.py  quadratic.py  test_1d_functions.py  unit_test_functions.py
(+16 files in other folders)
